--- a/agenda/app/views/devise/registrations/new.html.erb
+++ b/agenda/app/views/devise/registrations/new.html.erb
@@ -17,6 +17,9 @@
 
   <p><%= f.label :password_confirmation %><br />
   <%= f.password_field :password_confirmation %></p>
+  
+  <p><%= f.label :avatar_url %><br />
+  <%= f.text_field :avatar_url %></p>
 
   <p><%= f.submit "Sign up" %></p>
 <% end %>
