--- a/agenda/app/views/home/index.html.erb
+++ b/agenda/app/views/home/index.html.erb
@@ -5,5 +5,7 @@
   <% else %>
     <%= link_to "Cadastrar", new_user_registration_path %> ou <%= link_to "Logar", new_user_session_path %>
   <% end %>
+  </br>
+  <%= link_to 'Pessoa', people_path %>
 </div>
 
